; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_muconvert.c_runrange.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_muconvert.c_runrange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx = common dso_local global i32 0, align 4
@count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @runrange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @runrange(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  br label %6

6:                                                ; preds = %42, %1
  %7 = load i32, i32* @ctx, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* @count, align 4
  %10 = call i8* @fz_parse_page_range(i32 %7, i8* %8, i32* %3, i32* %4, i32 %9)
  store i8* %10, i8** %2, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %43

12:                                               ; preds = %6
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %25, %16
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp sle i32 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %18
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @runpage(i32 %23)
  br label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %5, align 4
  br label %18

28:                                               ; preds = %18
  br label %42

29:                                               ; preds = %12
  %30 = load i32, i32* %3, align 4
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %38, %29
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %4, align 4
  %34 = icmp sge i32 %32, %33
  br i1 %34, label %35, label %41

35:                                               ; preds = %31
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @runpage(i32 %36)
  br label %38

38:                                               ; preds = %35
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, -1
  store i32 %40, i32* %5, align 4
  br label %31

41:                                               ; preds = %31
  br label %42

42:                                               ; preds = %41, %28
  br label %6

43:                                               ; preds = %6
  ret void
}

declare dso_local i8* @fz_parse_page_range(i32, i8*, i32*, i32*, i32) #1

declare dso_local i32 @runpage(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
